[workspace]
members = [
    "programs/wick",
    "keeper",
    "sdk",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-sdk = "1.18"
solana-client = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
